packages/rolldown/tests/fixtures/builtin-plugin/isolated-declaration/error/main.ts.snap
Error: Build failed with 1 error:

[builtin:isolated-declaration] Error: TS9007: Function must have an explicit return type annotation with --isolatedDeclarations.
   ╭─[ main.ts:3:17 ]
   │
 3 │ export function b() {
   │                 ┬  
   │                 ╰── 
───╯
